# forensicnomicon

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md  ROADMAP.md  build_py.sh
.claude/commands/: review-dfir-feeds.md
.github/workflows/: docs.yml  feed-watch.yml  release.yml
archive/sources/: dfir-feeds.opml  feed-report.md  feed-state.json  manual-sources.json  pending-review.jsonl  pending-review.md  source-inventory.json  source-inventory.md
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_4n6query.py
crates/4n6query/: Cargo.toml
crates/4n6query/src/: main.rs
crates/4n6query/src/tui/: app.rs  dataset.rs  guards.rs  heatmap.rs  keys.rs  mod.rs  presets.rs  search.rs  theme.rs  ui.rs
crates/4n6query/tests/: cli_integration.rs
crates/4n6query/wix/: License.rtf  main.wxs
crates/fcatalog/: Cargo.toml
crates/fcatalog/src/: main.rs
crates/fnquery/: Cargo.toml
crates/ingest/: Cargo.toml
crates/ingest/src/: codegen.rs  dedup.rs  main.rs  normalize.rs  record.rs
crates/ingest/src/sources/: browsers.rs  evtx.rs  fa.rs  kape.rs  nirsoft.rs  regedit.rs  velociraptor.rs
docs/: architecture.html  index.md  module-research.md  module-sources.md  search.html
docs/plans/: 2026-05-05-tui-navigator-design.md  2026-05-06-tui-data-integration.md
research/: macos-lofl-catalog.yaml
scripts/: backfill_archives.py  check_feed_updates.py  discover_feeds.py  fetch_all_sources.py  fetch_filesec.py  fetch_gtfobins.py  fetch_lofl.py  fetch_lolbas.py  fetch_loobins.py  fetch_lots.py  fetch_transcript.py  mark_reviewed.py  migrate_to_jsonl.py  pending_lock.py  review_loop.sh  scrape_blog.py  sync_urlhaus.py
scripts/tests/: test_backfill_archives.py  test_check_feed_updates.py  test_discover_feeds.py  test_fetch_all_posts.py  test_fetch_all_sources.py  test_fetch_transcript.py  test_review_skill_fixes.py
src/: abusable_sites.rs  antiforensics.rs  antiforensics_aware.rs  artifact.rs  attack_flow.rs  catalog.rs  chainsaw.rs  commands.rs  dependencies.rs  encryption.rs  eventids.rs  evidence.rs  heuristics.rs  journald.rs  lib.rs  lolbins.rs  mitre.rs  navigator.rs  no_std_compat.rs  paths.rs  pca.rs  persistence.rs  playbooks.rs  plugin.rs  ports.rs  processes.rs  profile.rs  references.rs  remote_access.rs  sigma.rs  srum.rs  stix.rs  temporal.rs  third_party.rs  toolchain.rs  version_history.rs  volatility.rs  yara.rs
src/catalog/: decode.rs  tests.rs  types.rs
src/catalog/descriptors/: android_ext.rs  browser_ext.rs  cloud_ext.rs  linux_ext.rs  macos_ext.rs  mod.rs  vehicle_ext.rs  windows_evtx_ext.rs  windows_files_ext.rs  windows_logs_ext.rs  windows_registry_ext.rs  windows_registry_ext2.rs  windows_registry_ext3.rs
src/heuristics/: entropy.rs  evtx.rs  memory.rs  mod.rs  network.rs  paths.rs  process.rs  scoring.rs  srum.rs  timestamps.rs
src/threat_intel/: engine.rs
src/threat_intel/profiles/: father.rs
tests/: dump_lol_test.rs
