[package]
name = "forensic-catalog"
version = "0.1.0"
description = "DFIR knowledge as code: queryable artifact catalog with decode logic, MITRE ATT&CK mappings, triage priority, and indicator tables — zero dependencies"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/forensic-catalog"
homepage = "https://github.com/SecurityRonin/forensic-catalog"
documentation = "https://docs.rs/forensic-catalog"
keywords = ["forensics", "dfir", "security", "mitre", "artifacts"]
categories = ["science", "data-structures"]
readme = "README.md"
