[workspace]
members = [".", "crates/fcatalog", "crates/ingest"]

[package]
name = "forensicnomicon"
version = "0.1.0"
description = "The ForensicNomicon — comprehensive DFIR artifact catalog: UserAssist, Shimcache, Amcache, Prefetch, $MFT, ShellBags, EVTX, NTDS.dit, SAM, SRUM, LNK, Jump Lists + KAPE/Velociraptor/Sigma/MITRE. Zero deps."
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/forensicnomicon"
homepage = "https://github.com/SecurityRonin/forensicnomicon"
documentation = "https://docs.rs/forensicnomicon"
keywords = ["forensics", "dfir", "incident-response", "mitre", "artifacts"]
categories = ["science", "data-structures"]
readme = "README.md"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
