[package]
name = "forensicnomicon-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Albert Hui <albert@securityronin.com>"]
description = "4n6query — DFIR lookup tool: query LOL/LOFL binaries, abusable sites, and 6,548 forensic artifacts from the command line"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/forensicnomicon"
homepage = "https://github.com/SecurityRonin/forensicnomicon"
documentation = "https://docs.rs/forensicnomicon"
readme = "../../README.md"
keywords = ["dfir", "forensics", "lolbins", "mitre-attack", "soc"]
categories = ["command-line-utilities"]
exclude = [".github/", "target/", "wix/"]

[[bin]]
name = "4n6query"
path = "src/main.rs"

[dependencies]
forensicnomicon = { path = "../..", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

# ---------------------------------------------------------------------------
# cargo-deb: Debian / Ubuntu / Kali package
# ---------------------------------------------------------------------------
[package.metadata.deb]
maintainer = "SecurityRonin <security-ronin@users.noreply.github.com>"
section = "utils"
priority = "optional"
extended-description = """\
4n6query is the DFIR query CLI for the forensicnomicon catalog.
Look up any binary (certutil.exe, osascript, curl), abusable domain \
(raw.githubusercontent.com), MITRE technique (T1547.001), or keyword \
(userassist, prefetch) across 6,548 enriched forensic artifacts, \
all six LOL/LOFL datasets (Windows/macOS/Linux), and 54 abusable sites.
Also ships as 4q — the short alias for interactive use."""
assets = [
    ["../../target/release/4n6query", "usr/bin/4n6query", "755"],
    ["../../dist/4q", "usr/bin/4q", "755"],
]
